# LancerAI

./: .dockerignore  .env.example  .env.production.example  .env.test.example  .gitattributes  .gitignore  .gitleaks.toml  CONTRIBUTING.md  DESIGN.md  Dockerfile  LICENSE  LancerAI_remote_latest.code-workspace  README.md  TODO.md  alembic.ini  caythumuc.txt  deploy.sh  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  evaluation_report.md  exact_rewrite_raw.txt  exact_roast_raw.txt  katalon_test_guide.md  pyproject.toml  raw_response.txt  raw_roast_response.txt  requirements.txt  start.ps1  test_with_real_cv.py
.design/analysis/: reference_research.md  saas_reference_capture.mjs
.design/assets/: asset_manifest.md  asset_sources.md  replacement_plan.md
.design/cicd/: branch_cleanup_report.md  branching_strategy.md  cicd_architecture.md  cicd_runbook.md  cicd_validation_report.md  current_cicd_project_audit.md  deployment_rollback_runbook.md  git_branch_audit.md
.design/deployment/: browser_media_checklist.md
.design/design-system/: clone_inspired_visual_direction.md  design-system.md  frontend_ui_rules.md  full_visual_direction.md  lancerai_full_design_system.md  lancerai_visual_blueprint.md
.design/implementation/: asset_and_icon_plan.md  asset_sourcing_plan.md  component_plan.md  frontend_architecture.md  frontend_redesign_plan.md  full_frontend_rebuild_plan.md  full_visual_redesign_plan.md  interview_job_questionbank_plan.md  main_repository_cleanup_design.md  main_repository_cleanup_implementation_plan.md  topcv_crawler_questionbank_summary.md  topcv_crawler_runbook.md  ui_usability_improvement_plan.md  visual_assets_plan.md
.design/qa/: backend_api_bug_report.md  code_quality_review.md  demo_blocker_fix_plan.md  final_qa_summary.md  frontend_bug_report.md  frontend_ux_audit.md  integration_flow_report.md  release_readiness_checklist.md  security_privacy_review.md  test_environment_audit.md
.design/reference-analysis/: framer.md  linear.md  notion.md  raycast.md  stripe.md  superlist.md  vercel.md
.design/reviews/: browser_media_final_report.md  browser_media_pipeline_audit.md  frontend_audit.md  frontend_visual_gap_audit.md  full_frontend_rebuild_audit.md  full_visual_redesign_audit.md  interview_flow_audit.md  topcv_crawler_failure_audit.md  topcv_job_questionbank_context_audit.md  ui_usability_audit.md  visual_asset_audit.md
.github/: dependabot.yml
.github/workflows/: backend-ci.yml  ci.yml  deploy-production.yml  deploy-staging.yml  docker-ci.yml  frontend-ci.yml  release-deploy.yml  release.yml  security.yml
app/: README.md  __init__.py  main.py
app/core/: README.md  __init__.py  database.py  dependencies.py  json_extractor.py  lifespan.py  llm_connector.py  logger.py  ocr_processor.py  rate_limit.py  security.py  settings.py  sync_singleton.py  voice_stt_connector.py  voice_tts_connector.py
app/core/providers/: __init__.py  auth.py  connectors.py  repositories.py  services.py
app/models/: README.md  __init__.py  base.py  cv_record.py  interview_session.py  interview_transcript.py  job_listing.py  job_match_result.py  llm_cache.py  user.py
app/repository/: README.md  __init__.py  base_vector_repository.py  graph_repository.py  llm_cache_repository.py  relational_repository.py  vector_repository.py
app/router/: README.md  __init__.py
app/router/v1/: README.md  __init__.py  auth_api.py  extraction_api.py  interview_api.py  job_matching_api.py  optimization_api.py
app/schema/: README.md  __init__.py  request.py  response.py
app/service/: README.md  __init__.py  auth_service.py  extraction_service.py  interview_service.py  matching_service.py  optimization_service.py
app/service/agents/: README.md  __init__.py  audit_agent.py  graph.py  retrieval_agent.py  rewrite_agent.py  roast_agent.py  state.py
app/service/auth/: service.py
app/service/cv_analysis/: __init__.py  scorecard.py
app/service/extraction/: service.py
app/service/interview/: README.md  __init__.py  agents.py  behavior.py  pacing.py  pipeline.py  planning.py  scoring.py  service.py  state.py  state_machine.py
app/service/matching/: service.py
app/service/optimization/: README.md  __init__.py  audit_agent.py  graph.py  retrieval_agent.py  rewrite_agent.py  roast_agent.py  service.py  state.py  template_renderer.py
app/workers/: README.md  __init__.py  celery_app.py  crawler_worker.py  document_worker.py
docs/: ARCHITECTURE.md  FLOW_STUDY_CASES.md  PROJECT_REPORT.md  README.md  SYSTEM_OVERVIEW.md  TEAM_PLAN.md
docs/superpowers/plans/: 2026-07-15-current-ui-report.md  2026-07-15-disable-display-name-editing.md
docs/superpowers/specs/: 2026-07-15-current-ui-report-design.md  2026-07-15-disable-display-name-editing-design.md
frontend/: .env.example  Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/public/: site.webmanifest
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/api/: auth.js  extraction.js  http.js  interview.js  matching.js  optimization.js  paths.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/config/: env.js  storageKeys.js
frontend/src/data/: questionBank.js
infra/: README.md
migration/: README.md  __init__.py
migration/alembic/: env.py
nginx/: nginx.conf
scratch/: draw_evaluation_architecture.py  test_cloud_fallbacks.py  test_stt_only.py  transcribe_uploaded_audio.py
scripts/deploy/: compose_deploy.sh  compose_rollback.sh
tests/: README.md  __init__.py  conftest.py  test_api_routes.py  test_auth_dependency.py  test_cv_scorecard.py  test_database.py  test_extraction_service.py  test_graph_repository.py  test_interview_behavior.py  test_interview_pacing.py  test_interview_scoring.py  test_llm_cache.py  test_llm_hosted_config.py  test_matching_scoring.py  test_matching_security.py  test_models.py  test_ocr_processor.py  test_optimization_graph.py  test_prompt_guardrails.py  test_repository_hygiene.py  test_schemas.py  test_security.py  test_settings.py  test_smoke.py  test_topcv_crawler.py  test_vector_repository.py  test_workers.py
(+31 files in other folders)
