[project]
name = "lancerai"
version = "0.1.0"
description = "LancerAI — trợ lý sự nghiệp: trích xuất & tối ưu CV, matching, phỏng vấn voice."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "ZeePaul" }]

dependencies = [
    # Core Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-multipart>=0.0.12",
    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    # Task Queue
    "celery[redis]>=5.4.0",
    "redis>=5.2.0",
    # Module 1: CV Extraction
    "pymupdf>=1.24.0",
    "paddleocr>=2.8.0",
    "paddlepaddle>=2.6.0",
    # Module 2: Intelligence (LangGraph Multi-Agent)
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",
    "chromadb>=0.5.0",
    "qdrant-client>=1.7.0",
    # Module 3: Job Matching
    "sentence-transformers>=3.0.0",
    "scrapy>=2.11.0",
    "playwright>=1.48.0",
    # Module 4: Voice AI
    "faster-whisper>=1.0.0",    # STT — CTranslate2 int8 engine (spec requirement)
    "torch>=2.0.0",             # Required by silero-vad
    "torchaudio>=2.0.0",        # Audio resampling
    "silero-vad>=5.0",          # VAD (Voice Activity Detection)
    "edge-tts>=6.1.0",
    "pydub>=0.25.1",
    "httpx>=0.27.0",
    # Document Generation
    "weasyprint>=62.0",
    "python-docx>=1.1.0",
    "websockets>=16.0",
    "soundfile>=0.13.1",
    "numpy>=2.0.0",
    "Pillow>=10.0.0",
    "vieneu>=2.4.3",      # TODO: uncommit khi VoiceTTSConnector (vieneu engine) được implement
    "onnxruntime>=1.20.0",  # TODO: phụ thuộc của vieneu/PaddleOCR
    "bcrypt>=4.2.0",
    "pyjwt>=2.12.1",
    "slowapi>=0.1.9",
    "neo4j>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
    "mypy>=1.12.0",
    "pre-commit>=4.0.0",
    "aiosqlite>=0.20.0",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: tests requiring external services (Qdrant, ChromaDB HTTP). Run with -m integration.",
]
addopts = "-m 'not integration'"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
    "mypy>=1.12.0",
    "pre-commit>=4.0.0",
    "aiosqlite>=0.22.1",
]
