[project]
name = "lancerai"
version = "0.1.0"
description = "LancerAI — trợ lý sự nghiệp: trích xuất & tối ưu CV, matching, phỏng vấn voice."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "ZeePaul" }]

dependencies = [
    # Core Framework
    "fastapi>=0.139.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-multipart>=0.0.32",
    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.18.5",
    # Task Queue
    "celery[redis]>=5.4.0",
    "redis>=5.2.0",
    # Module 1: CV Extraction
    "pymupdf>=1.28.0",
    # paddleocr and paddlepaddle are intentionally excluded from production builds.
    # They pull CUDA-linked binaries (~700 MB) and are replaced by pymupdf in prod.
    # See Dockerfile: uv pip uninstall paddlepaddle paddleocr paddle2onnx
    # Module 2: Intelligence (LangGraph Multi-Agent)
    "langgraph>=0.2.0",
    "langchain-core>=1.4.9",
    "langchain-community>=0.4.2",
    "chromadb>=1.5.9",
    "qdrant-client>=1.7.0",
    # Module 3: Job Matching
    "sentence-transformers>=5.6.0",
    "scrapy>=2.17.0",
    "playwright>=1.61.0",
    # Module 4: Voice AI
    "faster-whisper>=1.0.0", # STT — CTranslate2 int8 engine (spec requirement)
    "torch>=2.0.0", # Required by silero-vad
    "torchaudio>=2.0.0", # Audio resampling
    "silero-vad>=5.0", # VAD (Voice Activity Detection)
    "edge-tts>=6.1.0",
    "pydub>=0.25.1",
    "httpx>=0.27.0",
    # Document Generation
    "weasyprint>=62.0",
    "python-docx>=1.1.0",
    "websockets>=16.1",
    "soundfile>=0.14.0",
    "numpy>=2.4.6",
    "Pillow>=10.0.0",
    "vieneu>=3.2.0", # TODO: uncommit khi VoiceTTSConnector (vieneu engine) được implement
    "onnxruntime>=1.27.0", # TODO: phụ thuộc của vieneu/PaddleOCR
    "bcrypt>=4.2.0",
    "pyjwt>=2.13.0",
    "slowapi>=0.1.10",
    "neo4j>=5.0.0",
    "beautifulsoup4>=4.12.0",
    "llama-cpp-python>=0.3.16",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.15.21",
    "mypy>=1.12.0",
    "pre-commit>=4.0.0",
    "aiosqlite>=0.20.0",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.lint.per-file-ignores]
"app/core/lifespan.py" = ["E501"]
"app/router/v1/interview_api.py" = ["E501"]
"app/service/interview/pipeline.py" = ["E501"]
"app/service/interview/planning.py" = ["E501"]
"app/service/matching/service.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: tests requiring external services (Qdrant, ChromaDB HTTP). Run with -m integration.",
]
addopts = "-m 'not integration'"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.uv]
dev-dependencies = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.15.21",
    "mypy>=1.12.0",
    "pre-commit>=4.0.0",
    "aiosqlite>=0.22.1",
]

# Force torch and torchaudio to always resolve from the CPU-only wheel index.
# This prevents uv sync from ever downloading the multi-GB CUDA distribution,
# which would exhaust disk space during Docker builds on CPU-only servers.
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchaudio = { index = "pytorch-cpu" }
